[F] videntifier insert (without params)
